[tool.poetry]
name = "flask-udemy-101"
version = "0.1.0"
description = ""
authors = ["Luis Ek <Luis.Ek.-ND@disney.com>"]
readme = "README.md"
packages = [{include = "flask_udemy_101"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
